--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
             color: #333;
             white-space: pre-wrap;
             word-wrap: break-word;
+            max-height: 400px;  /* Set the desired maximum height */
+            overflow: auto;     /* Enable scrolling if content exceeds the max height */
         }
     </style>
     <script>
